# saddle-world-terrain

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: CFNeWMXL.js  DBnA7QEW.js  DFKJJcPV.js  IH8S3rTJ.js  O32o_7fs.js
_app/immutable/entry/: app.GyOm70aj.js  start.B0qUZ6Te.js
_app/immutable/nodes/: 0.C3kHLf5m.js  1.B8ptvC_O.js  2.D8ZEKdTR.js  3.BiktniHJ.js  4.9sailUnH.js
demo/async_streaming/: index.html
demo/basic/: index.html
demo/clipmap_debug/: index.html
demo/island/: index.html
demo/mountain_range/: index.html
demo/physics_colliders/: index.html
demo/splat_layers/: index.html
demo/terrain_sculpting/: index.html
demos/async_streaming/: index.html
demos/basic/: index.html
demos/clipmap_debug/: index.html
demos/island/: index.html
demos/mountain_range/: index.html
demos/physics_colliders/: index.html
demos/splat_layers/: index.html
demos/terrain_sculpting/: index.html
docs/: architecture.md  configuration.md  debugging.md
docs/architecture/: __data.json  index.html
docs/configuration/: __data.json  index.html
docs/debugging/: __data.json  index.html
examples/: Cargo.toml
examples/async_streaming/: Cargo.toml
examples/async_streaming/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/clipmap_debug/: Cargo.toml
examples/clipmap_debug/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/island/: Cargo.toml
examples/island/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/e2e_output/terrain_collider_payload/: log.txt
examples/lab/e2e_output/terrain_lod_transition/: log.txt
examples/lab/e2e_output/terrain_material_layers/: log.txt
examples/lab/e2e_output/terrain_smoke/: log.txt
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs  support.rs
examples/mountain_range/: Cargo.toml
examples/mountain_range/src/: main.rs
examples/open_world_showcase/: Cargo.toml
examples/open_world_showcase/src/: e2e.rs  main.rs  main_tests.rs
examples/physics_colliders/: Cargo.toml
examples/physics_colliders/src/: main.rs
examples/splat_layers/: Cargo.toml
examples/splat_layers/src/: main.rs
examples/terrain_sculpting/: Cargo.toml
examples/terrain_sculpting/src/: main.rs
src/: chunking.rs  chunking_tests.rs  components.rs  config.rs  debug.rs  lib.rs  lod.rs  lod_tests.rs  material.rs  meshing.rs  meshing_tests.rs  sampling.rs  sampling_tests.rs  source.rs  source_tests.rs  systems.rs  systems_tests.rs  textured_material.rs
src/shaders/: terrain_texture.wgsl
