[workspace]
members = [
    "common",
    "basic",
    "clipmap_debug",
    "splat_layers",
    "open_world_showcase",
    "async_streaming",
    "physics_colliders",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-world-terrain = { path = ".." }
saddle-camera-orbit-camera = { git = "https://github.com/julien-blanchon/saddle-camera-orbit-camera" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
