[workspace]
members = [
    "common",
    "basic",
    "clipmap_debug",
    "splat_layers",
    "async_streaming",
    "physics_colliders",
    "island",
    "mountain_range",
    "terrain_sculpting",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-world-terrain = { path = ".." }
saddle-camera-orbit-camera = { git = "https://github.com/julien-blanchon/saddle-camera-orbit-camera" }
saddle-procgen-noise = { git = "https://github.com/julien-blanchon/saddle-procgen-noise" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
