[package]
name = "saddle-world-terrain-example-common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-world-terrain = { workspace = true }
saddle-procgen-noise = { workspace = true }
saddle-pane = { workspace = true }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }

[lints]
workspace = true
