[package]
name = "saddle-world-terrain-example-open-world-showcase"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-world-terrain = { workspace = true }
saddle-camera-orbit-camera = { workspace = true }
saddle-procgen-noise = { git = "https://github.com/julien-blanchon/saddle-procgen-noise" }
saddle-world-sky = { git = "https://github.com/julien-blanchon/saddle-world-sky" }
saddle-world-wind = { git = "https://github.com/julien-blanchon/saddle-world-wind" }
saddle-world-foliage = { git = "https://github.com/julien-blanchon/saddle-world-foliage" }
grass = { package = "saddle-rendering-grass", git = "https://github.com/julien-blanchon/saddle-rendering-grass" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
